--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
         <div id="root">
-            <h2 class="title_banner">USERS API</h2>
+            <h2 class="title_banner">USER API</h2>
         <table class="users_table">
             <thead class="">
                 <tr>
